tests/ui/std/alloc/realloc.normal.stderr
error: use a pointer from `u32` after it's reallocated
  --> tests/ui/std/alloc/realloc.rs:33:17
   |
LL |         let new_ptr = realloc(ptr as *mut u8, layout, layout.size() * 2) as *mut u32;
   |                       -------------------------------------------------- `realloc` called here
...
LL |         let x = *ptr;
   |                 ^^^^ used here
   |
   = note: the `u32` buffer may be reallocated here
   = note: `#[deny(rpl::use_after_realloc)]` on by default

error: use a pointer from `u32` after it's reallocated
  --> tests/ui/std/alloc/realloc.rs:50:9
   |
LL |         let new_ptr = realloc(ptr as *mut u8, layout, layout.size() * 2) as *mut u32;
   |                       -------------------------------------------------- `realloc` called here
...
LL |         *ptr = 0;
   |         ^^^^^^^^ used here
   |
   = note: the `u32` buffer may be reallocated here

error: use a pointer from `u32` after it's reallocated
  --> tests/ui/std/alloc/realloc.rs:67:17
   |
LL |         let new_ptr = realloc(ptr as *mut u8, layout, layout.size() * 2) as *mut u32;
   |                       -------------------------------------------------- `realloc` called here
...
LL |         let v = &mut *ptr;
   |                 ^^^^^^^^^ used here
   |
   = note: the `u32` buffer may be reallocated here

error: aborting due to 3 previous errors

